# verifiable-trust-infrastructure

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.nitro  README.md  deny.toml  phase5-cutover.md  sealed-bootstrap.md
.github/workflows/: ci.yml
cnm-cli/: Cargo.toml  README.md
cnm-cli/src/: auth.rs  config.rs  main.rs  setup.rs
crates/affinidi-messaging-didcomm-service/: .cargo_vcs_info.json  Cargo.toml
crates/affinidi-messaging-didcomm-service/src/: config.rs
crates/affinidi-messaging-didcomm-service/src/service/: listener.rs
deploy/nitro/: README.md  config.toml  deploy-vta.sh  enclave-entrypoint.sh  generate-signing-key.sh  iam-kms-admin-policy.json  parent-proxy.sh  setup-kms-policy.sh  vsock-proxy.sh
deploy/nitro/enclave-proxy/: Cargo.toml
deploy/nitro/enclave-proxy/src/: bridge.rs  channels.rs  config.rs  detect.rs  main.rs  protocol.rs  resolve.rs  storage.rs
didcomm-test/: Cargo.toml  README.md
didcomm-test/src/: main.rs
docs/: VTA_Service_Overview.md  VTA_Service_Overview.pptx  bip32_paths.md  cold-start-guide.md  design.md  didcomm_protocol.md  extending.md  feature-flags.md  generate_presentation.py  integration-guide.md  security-architecture.md  security.md  store-migration.md  threat-model.md  ~$VTA_Service_Overview.pptx
docs/design/: tee-enclave-security.md
pnm-cli/: Cargo.toml  README.md
pnm-cli/src/: auth.rs  bootstrap.rs  config.rs  main.rs  setup.rs
vta-cli-common/: Cargo.toml  README.md
vta-cli-common/src/: lib.rs  local_keygen.rs  render.rs  sealed_consumer.rs  sealed_producer.rs
vta-cli-common/src/commands/: acl.rs  audit.rs  config.rs  contexts.rs  credentials.rs  keys.rs  mod.rs  webvh.rs
vta-enclave/: Cargo.toml  README.md
vta-enclave/src/: main.rs  vsock_log.rs
vta-sdk/: Cargo.toml  README.md
vta-sdk/src/: attestation.rs  auth_light.rs  client.rs  context_provision.rs  credentials.rs  did_key.rs  did_secrets.rs  didcomm_init.rs  didcomm_light.rs  didcomm_session.rs  didcomm_transport.rs  error.rs  lib.rs  prelude.rs  session.rs  webvh.rs
vta-sdk/src/integration/: auth.rs  cache.rs  mod.rs
vta-sdk/src/keys/: mod.rs
vta-sdk/src/protocols/: attestation_management.rs  auth.rs  discovery.rs  mod.rs
vta-sdk/src/protocols/acl_management/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
vta-sdk/src/protocols/audit_management/: list.rs  mod.rs  retention.rs
vta-sdk/src/protocols/backup_management/: mod.rs  types.rs
vta-sdk/src/protocols/context_management/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs  update_did.rs
vta-sdk/src/protocols/credential_management/: generate.rs  mod.rs
vta-sdk/src/protocols/did_management/: create.rs  delete.rs  get.rs  list.rs  mod.rs  servers.rs
vta-sdk/src/protocols/key_management/: create.rs  list.rs  mod.rs  secret.rs  sign.rs
vta-sdk/src/protocols/seed_management/: list.rs  mod.rs  rotate.rs
vta-sdk/src/protocols/vta_management/: get_config.rs  mod.rs  restart.rs  update_config.rs
vta-sdk/src/sealed_transfer/: armor.rs  bundle.rs  chunk.rs  error.rs  hpke.rs  mod.rs  nonce.rs  request.rs
vta-service/: CLAUDE.md  Cargo.toml  README.md  VTA-did.jsonl  config.toml  webvh-server-did.jsonl
vta-service/data/vta/: 0.jnl
vta-service/data/vta/keyspaces/0/: current  v8
vta-service/data/vta/keyspaces/0/tables/: 6
vta-service/src/: acl_cli.rs  acl_sweeper.rs  audit.rs  bootstrap_cli.rs  config.rs  did_key.rs  did_webvh.rs  didcomm_bridge.rs  error.rs  import_did.rs  keys_cli.rs  lib.rs  main.rs  metrics.rs  seal.rs  server.rs  setup.rs  status.rs  webvh_cli.rs  webvh_client.rs  webvh_didcomm.rs  webvh_store.rs
vta-service/src/auth/: credentials.rs  extractor.rs  jwt.rs  mod.rs  session.rs
vta-service/src/contexts/: mod.rs
vta-service/src/keys/: derivation.rs  imported.rs  mod.rs  paths.rs  seeds.rs  wrapping.rs
vta-service/src/keys/seed_store/: aws.rs  azure.rs  config.rs  gcp.rs  keyring.rs  kms_tee.rs  mod.rs  plaintext.rs
vta-service/src/messaging/: auth.rs  handlers.rs  mod.rs  response.rs  router.rs  service_handlers.rs
vta-service/src/messaging/handlers/: acl.rs  attestation.rs  audit.rs  config.rs  contexts.rs  credentials.rs  did_webvh.rs  keys.rs  mod.rs  seeds.rs
vta-service/src/operations/: acl.rs  attestation.rs  audit.rs  backup.rs  cache.rs  config.rs  contexts.rs  credentials.rs  did_webvh.rs  keys.rs  mod.rs  seeds.rs
vta-service/src/routes/: acl.rs  attestation.rs  audit.rs  auth.rs  backup.rs  bootstrap.rs  cache.rs  capabilities.rs  config.rs  contexts.rs  did_webvh.rs  health.rs  keys.rs  mod.rs  vta.rs
vta-service/src/store/: mod.rs
vta-service/src/tee/: admin_bootstrap.rs  detect.rs  did_autogen.rs  kms_bootstrap.rs  mnemonic_guard.rs  mod.rs  nitro.rs  provider.rs  sev_snp.rs  simulated.rs  types.rs
vta-service/tests/: api_integration.rs  auth_flow.rs  security.rs
vtc-service/: CLAUDE.md  Cargo.toml  README.md  VTC-did.jsonl  config.toml
vtc-service/data/vtc/: 0.jnl
vtc-service/data/vtc/keyspaces/0/: current  v2
vtc-service/data/vtc/keyspaces/0/tables/: 0
vtc-service/src/: acl_cli.rs  config.rs  did_key.rs  did_webvh.rs  error.rs  import_did.rs  main.rs  messaging.rs  server.rs  setup.rs  status.rs
vtc-service/src/acl/: mod.rs
vtc-service/src/auth/: extractor.rs  jwt.rs  mod.rs
vtc-service/src/keys/: mod.rs
vtc-service/src/keys/seed_store/: aws.rs  azure.rs  config.rs  gcp.rs  keyring.rs  mod.rs  plaintext.rs
vtc-service/src/routes/: acl.rs  auth.rs  config.rs  health.rs  mod.rs
vtc-service/src/store/: mod.rs
vti-common/: CLAUDE.md  Cargo.toml  README.md
vti-common/src/: config.rs  error.rs  lib.rs  seed_store.rs
vti-common/src/acl/: mod.rs  pending_bootstrap.rs
vti-common/src/auth/: extractor.rs  jwt.rs  mod.rs
vti-common/src/store/: encryption.rs  mod.rs  vsock.rs
