[package]
name = "cnm-cli"
description = "CLI Tool for Verified Trust Agents operating in Verified Trust Communities"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true

[[bin]]
name = "cnm"
path = "src/main.rs"

[features]
default = ["keyring"]
keyring = ["vta-sdk/keyring"]
config-session = ["vta-sdk/config-session"]
azure-secrets = ["vta-sdk/azure-secrets"]

[dependencies]
vta-sdk = { path = "../vta-sdk", features = ["session"] }
vta-cli-common = { path = "../vta-cli-common" }
affinidi-did-resolver-cache-sdk = "0.7"
clap = { workspace = true, features = ["env"] }
dialoguer = "0.12"
dirs = "6"
serde = { workspace = true }
toml = "1.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
