[package]
name = "vta-cli-common"
description = "Shared CLI command handlers and rendering helpers for VTA CLIs"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vta-sdk = { path = "../vta-sdk", features = ["client"] }
ratatui = { workspace = true }
