[package]
name = "vta-cli-common"
description = "Shared CLI command handlers and rendering helpers for VTA CLIs"
readme = "README.md"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vta-sdk = { path = "../vta-sdk", version = "0.3.0", features = ["client"] }
chrono = "0.4"
ed25519-dalek = "2"
ratatui = { workspace = true }
serde_json = { workspace = true }
multibase = { workspace = true }
x25519-dalek = { workspace = true }
sha2 = { workspace = true }
hkdf = "0.12"
aes-gcm = "0.10"
base64 = { workspace = true }
