[package]
name = "vti-common"
description = "Shared server-side infrastructure for VTA and VTC services"
readme = "README.md"
version = "0.3.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
encryption = ["dep:aes-gcm", "dep:zeroize", "dep:rand"]
vsock-store = ["dep:tokio-vsock", "dep:libc"]

[dependencies]
axum = "0.8"
axum-extra = { workspace = true }
fjall = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ed25519-dalek = { workspace = true }

# Secrets resolver (for error type)
affinidi-tdk = { workspace = true }

# Encryption (feature-gated)
aes-gcm = { version = "0.10", optional = true }
zeroize = { version = "1", features = ["derive"], optional = true }
rand = { workspace = true, optional = true }

# Vsock storage proxy client (feature-gated, Linux only)
tokio-vsock = { version = "0.7", optional = true }
libc = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3"
base64 = { workspace = true }
