[package]
name = "enclave-proxy"
description = "VTA Nitro Enclave parent-instance proxy — bridges vsock, TCP, and TLS"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
license = "Apache-2.0"
publish = false

# This crate is NOT a workspace member. It compiles only on Linux (requires vsock).
# Build on the EC2 parent instance:
#   cd deploy/nitro/enclave-proxy && cargo build --release

[[bin]]
name = "enclave-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "time"] }
tokio-vsock = "0.5"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
webpki-roots = "1"
clap = { version = "4", features = ["derive"] }
toml = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
